CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(modes_rx_db_2_gpx)

FIND_PATH( SQLITE3_INCLUDE_DIR sqlite3.h )
FIND_LIBRARY(SQLITE3_LIBRARY NAMES sqlite3 )


FIND_PACKAGE( Boost 1.40 COMPONENTS program_options REQUIRED )

FIND_PACKAGE( LibXml2  REQUIRED )


INCLUDE_DIRECTORIES( ${SQLITE3_INCLUDE_DIR} ${LIBXML2_INCLUDE_DIR} ${Boost_INCLUDE_DIR} )

ADD_EXECUTABLE( modes_rx_db_2_gpx src/modes_rx_db_2_gpx.cc )

TARGET_LINK_LIBRARIES( modes_rx_db_2_gpx ${SQLITE3_LIBRARY} ${LIBXML2_LIBRARIES} ${Boost_LIBRARIES} )
